--- a/index.html
+++ b/index.html
@@ -3,110 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>개발자 홈페이지</title>
-    <link rel="stylesheet" href="portFolioStyle.css">
-    <style>
-
-body {
-    background-color: #f4f4f4;
-    color: #333;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-color: #222;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-    font-style: italic;
-}
-
-.profile-pic {
-    width: 150px;
-    height: 150px;
-    border-radius: 75px;
-    border: 3px solid white;
-}
-
-.info-table {
-    width: 60%;
-    margin: 20px auto;
-    border-collapse: collapse;
-    background-color: #f9f9f9;
-    color: #333; /* 글씨색 변경 */
-}
-
-.info-table th, .info-table td {
-    border: 1px solid #ccc;
-    padding: 10px;
-    text-align: left;
-}
-
-.info-table th {
-    background-color: #3f3b8e;
-    color: white;
-}
-
-.social-links a, .social-links img {
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-}
-
-.social-links img {
-    width: 40px;
-    transition: transform 0.3s;
-    display: block;
-}
-
-.social-links img:hover {
-    transform: scale(1.1);
-}
-
-.projects {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 20px;
-    padding: 20px;
-}
-
-.project {
-    width: 30%;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    padding: 10px;
-    text-align: center;
-}
-
-.project img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 5px;
-}
-.project h2 {
-    color:  #3f3b8e; 
-}
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-    position: relative; 
-    width: 100%;
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-}
-
-.footer-logo {
-    width: 50px;
-    display: block;
-}
-
-    </style>
+    <link rel="stylesheet" href="/portFolioStyle.css">
 </head>
 <body>
     <header>
